fixed skills on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1794,6 +1794,13 @@ input, select, textarea {
 
 .skills-icon-container img {
 	margin: 10px;
+	width: 120px;
+}
+
+@media screen and (max-width: 480px) {
+	.skills-icon-container img {
+		width: 80px;
+	}
 }
 
 /* Works on Firefox */
